Cleanups suggested in review