@@ -28,7 +28,6 @@
  * @modules java.base/sun.net.www.protocol.file
  * @library /test/lib
  * @summary  Check that URL.openConnection() doesn't open connection to UNC
- * @run main UNCTest
  */
 
 import jtreg.SkippedException;
@@ -36,6 +35,7 @@ import sun.net.www.protocol.file.FileURLConnection;
 
 import java.io.File;
 import java.net.InetAddress;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -43,29 +43,27 @@ public class UNCTest {
     public static void main(String args[]) throws Exception {
         // Get the "computer name" for this host
         String hostName = InetAddress.getLocalHost().getHostName();
-        // Skip the test if Administrative Shares is disabled
-        skipIfAdministrativeSharesDisabled(hostName);
-        // Should always exist with Administrative Shares enabled
-        URL url = new URL("file://" + hostName +"/C$/Windows");
+
+        // UNC path which always exist with Administrative Shares enabled
+        String path = "\\\\" + hostName + "\\C$\\Windows";
+
+        // Skip test if Administrative Shares is disabled
+        if (! new File(path).exists()) {
+            throw new SkippedException("Administrative shares not enabled");
+        }
+
+        // File URL for the UNC path
+        URL url = new URI("file:" + path.replace('\\', '/')).toURL();
+
         // Should return an UNCFileURLConnection
         URLConnection conn = url.openConnection();
+
         // Sanity check that the UNC path resulted in a FileURLConnection
         if (! (conn instanceof FileURLConnection)) {
             throw new Exception("Expected FileURLConnection for UNC path, instead got " + conn.getClass().getName());
         }
+
         // Verify that the connection is not already connected
         conn.setRequestProperty( "User-Agent", "Java" );
-    }
-
-    /**
-     * If the UNC path "\\hostname\C$\Windows" does not exists, then
-     * 'Administrative Shares' is not enabled on this host and we skip the test
-     * @param hostName the name of the local computer
-     */
-    private static void skipIfAdministrativeSharesDisabled(String hostName) {
-        String uncPath = "\\\\" + hostName + "\\C$\\Windows";
-        if (! new File(uncPath).exists()) {
-            throw new SkippedException("Administrative shares not enabled");
-        }
     }
 }
